# arb-bot-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  config.example.toml  docker-compose.yml  rust-toolchain.toml
binance/: Cargo.toml
binance/benches/exchange/: mod.rs  order_benchmark.rs
binance/src/: config.rs
binance/src/libs/binance_client/: account.rs  api.rs  client.rs  enums.rs  general.rs  stream.rs  utils.rs  ws.rs
binance/src/services/: broadcast.rs  storage.rs
binance/src/services/exchange/: asset.rs  chain.rs  order.rs  service.rs  ticker.rs
binance/src/services/sender/: service.rs
cli/: Cargo.toml
cli/src/: config.rs  launcher.rs  main.rs  ui.rs
cli/src/ui/: alerts.rs  components.rs  mod.rs
engine/: Cargo.toml
engine/src/: enums.rs  lib.rs
engine/src/model/: orders.rs
engine/src/runtime/: channel.rs  metrics.rs  mod.rs  process.rs  weight.rs
engine/src/service/: builder.rs  factory.rs  mod.rs  traits.rs
kucoin/: Cargo.toml
kucoin/benches/: benches.rs
kucoin/benches/exchange/: order_benchmark.rs
kucoin/src/: config.rs  lib.rs
kucoin/src/libs/: mod.rs
kucoin/src/libs/kucoin_client/: api.rs  client.rs  enums.rs  market.rs  models.rs  stream.rs  utils.rs  ws.rs
kucoin/src/services/: broadcast.rs
kucoin/src/services/exchange/: asset.rs  chain.rs  order.rs  service.rs  ticker.rs
kucoin/src/services/sender/: service.rs
solana/: Cargo.toml
solana/src/: config.rs
solana/src/libs/: mod.rs
solana/src/libs/solana_client/: callback.rs  dex.rs  grpc.rs  grpc_client.rs  grpc_stream.rs  mod.rs  rpc.rs  rpc_client.rs  traits.rs  utils.rs  ws_stream.rs
solana/src/libs/solana_client/dex/: mod.rs  model.rs  parser.rs  registry.rs  utils.rs
solana/src/libs/solana_client/dex/meteora_damm_v2/: account.rs  constants.rs  error.rs  mod.rs  swap.rs
solana/src/libs/solana_client/dex/meteora_damm_v2/base_fee/: base_fee_serde.rs  fee_market_cap_scheduler.rs  fee_rate_limiter.rs  fee_time_scheduler.rs  mod.rs
solana/src/libs/solana_client/dex/meteora_damm_v2/liquidity_handler/: compounding_liquidity.rs  concentrated_liquidity.rs  mod.rs
solana/src/libs/solana_client/dex/meteora_damm_v2/math/: fee_math.rs  mod.rs  safe_math.rs  utils_math.rs
solana/src/libs/solana_client/dex/meteora_damm_v2/params/: fee_parameters.rs
solana/src/libs/solana_client/dex/meteora_damm_v2/state/: fee.rs  mod.rs
solana/src/libs/solana_client/dex/meteora_damm_v2/utils/: activation_handler.rs
solana/src/libs/solana_client/dex/meteora_dlmm/: account.rs  constants.rs  mod.rs  quote.rs  swap.rs  token_2022.rs  typedefs.rs  types.rs
solana/src/libs/solana_client/dex/meteora_dlmm/extensions/: bin.rs  bin_array.rs  bin_array_bitmap.rs  lb_pair.rs  mod.rs
solana/src/libs/solana_client/dex/meteora_dlmm/math/: price_math.rs  u128x128_math.rs  u64x64_math.rs  utils.rs
solana/src/libs/solana_client/dex/models/: events.rs
solana/src/libs/solana_client/dex/orca/: account.rs  constants.rs  mod.rs  oracle.rs  swap.rs  token.rs
solana/src/libs/solana_client/dex/orca/math/: int_division_math.rs  mod.rs
solana/src/libs/solana_client/dex/pump_fun/: account.rs  mod.rs  swap.rs
solana/src/libs/solana_client/dex/radium_amm/: account.rs  mod.rs  swap.rs
solana/src/libs/solana_client/dex/radium_clmm/: account.rs  mod.rs  swap.rs
solana/src/libs/solana_client/dex/radium_cpmm/: account.rs  mod.rs  swap.rs
solana/src/libs/solana_client/dex/raydium_amm/: account.rs  mod.rs  swap.rs
solana/src/libs/solana_client/dex/raydium_amm/program/: math.rs
solana/src/libs/solana_client/dex/raydium_clmm/: account.rs  constants.rs  mod.rs  swap.rs  token_2022.rs
solana/src/libs/solana_client/dex/raydium_clmm/instructions/: swap.rs
solana/src/libs/solana_client/dex/raydium_clmm/libraries/: full_math.rs  liquidity_math.rs  sqrt_price_math.rs  swap_math.rs  tick_array_bit_map.rs  tick_math.rs  unsafe_math.rs
solana/src/libs/solana_client/dex/raydium_cpmm/: account.rs  error.rs  mod.rs  swap.rs
solana/src/libs/solana_client/dex/raydium_cpmm/curve/: calculator.rs  constant_product.rs
solana/src/libs/solana_client/dex/raydium_cpmm/utils/: math.rs
solana/src/libs/solana_client/dex/registry/: core.rs  definitions.rs  mod.rs  traits.rs
solana/src/libs/solana_client/metrics/: labels.rs  mod.rs  rpc.rs  stream.rs  traits.rs
solana/src/libs/solana_client/models/: events.rs  mod.rs  protocol.rs
solana/src/libs/solana_client/pool/: config.rs  liquidity.rs  mod.rs  quote.rs  traits.rs
solana/src/libs/solana_client/protocols/: mod.rs
solana/src/libs/solana_client/protocols/kamino/: constants.rs  fraction.rs  mod.rs  reserve.rs
solana/src/libs/solana_client/protocols/meteora_damm_v2/: account.rs  constants.rs  swap.rs
solana/src/libs/solana_client/protocols/meteora_damm_v2/params/: mod.rs  (+2 more)
solana/src/libs/solana_client/protocols/meteora_dlmm/: account.rs  mod.rs  pda.rs  quote.rs  swap.rs  token_2022.rs
solana/src/libs/solana_client/protocols/orca/: account.rs  oracle.rs  swap.rs
solana/src/libs/solana_client/protocols/raydium_amm/: account.rs  constants.rs  swap.rs
solana/src/libs/solana_client/protocols/raydium_clmm/: account.rs  error.rs  mod.rs  pda.rs  swap.rs
solana/src/libs/solana_client/protocols/raydium_cpmm/: account.rs  constants.rs  swap.rs  token_2022.rs
solana/src/libs/solana_client/registry/: core.rs  definitions.rs  mod.rs  traits.rs
solana/src/services/: mod.rs
solana/src/services/exchange/: background.rs  compute.rs  market.rs  mint.rs  mod.rs  service.rs
solana/src/services/exchange/background/: amm_config.rs  lazy_sync.rs  mint.rs  mod.rs  traits.rs
solana/src/services/exchange/cache/: amm_config.rs  bitmap.rs  index.rs  liquidity.rs  metrics.rs  mint.rs  mod.rs  oracle.rs  pool.rs  reserve.rs  state.rs  sync.rs  vault.rs
solana/src/services/sender/: service.rs
tools/: Cargo.toml
tools-derive/: Cargo.toml
tools-derive/src/: lib.rs
tools/src/: lib.rs  toml.rs
tools/src/http/: http_server.rs  metrics.rs  mod.rs
tools/src/misc/: backoff.rs  mod.rs  time.rs  toml.rs
tools/src/telemetry/: init.rs  mod.rs
(+184 files in other folders)
