[package]
name = "arb-bot-rs"
version = "0.3.1"
edition = "2024"

[[bin]]
name = "bot"
path = "src/bin/bot/main.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = { version = "0.1.89" }
axum = { version = "0.8.6", features = ["http1", "http2", "json", "macros"] }
dashmap = { version = "6.1.0" }
futures-util = { version = "0.3.31" }
hex = { version = "0.4.3" }
hmac = { version = "0.12.1" }
itertools = { version = "0.14.0" }
metrics = { version = "0.24.2" }
metrics-exporter-prometheus = { version = "0.17.2" }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.24", features = ["json"] }
rust_decimal = { version = "1.39.0", features = ["serde-with-float"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = { version = "3.15.0", features = ["macros"] }
sha2 = { version = "0.10.9" }
strum = { version = "0.27.2" }
strum_macros = { version = "0.27.2" }
thiserror = { version = "2.0.17" }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "net", "signal"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio-util = { version = "0.7.16" }
toml = { version = "0.9.8" }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "registry", "std", "fmt", "json"] }
url = { version = "2.5.7" }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.7.0" }
serde_json = "1.0.145"

[profile.release-lto]
inherits = "release"
lto = true
strip = true

[lints.rust]
unsafe_code = "forbid"

[[bench]]
name = "benches"
harness = false
