[workspace]
members = [
    "binance",
    "cli",
    "engine",
    "kucoin",
    "solana",
    "tools",
    "tools-derive",
]
resolver = "3"

[workspace.package]
version = "0.7.0"
edition = "2024"
authors = ["mkbeh"]
license = "MIT"

[workspace.dependencies]
anyhow = { version = "1.0.100" }
async-trait = { version = "0.1.89" }
axum = { version = "0.8.8" }
backon = { version = "1.6.0", features = ["tokio"] }
base64 = { version = "0.22.1" }
clap = { version = "4.5.54", features = ["derive"] }
comfy-table = { version = "7.2.2" }
dashmap = { version = "6.1.0" }
futures-util = { version = "0.3.31" }
hex = { version = "0.4.3" }
hmac = { version = "0.12.1" }
itertools = { version = "0.14.0" }
metrics = { version = "0.24.3" }
owo-colors = { version = "4" }
percent-encoding = { version = "2.3.2" }
rayon = { version = "1.11.0" }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "1.39.0", features = ["serde-with-float"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149" }
serde_urlencoded = { version = "0.7.1" }
serde_with = { version = "3.16.1", features = ["macros"] }
sha2 = { version = "0.10.9" }
strum = { version = "0.27.2" }
strum_macros = { version = "0.27.2" }
thiserror = { version = "2.0.17" }
tokio = { version = "1.49.0", default-features = false, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls"] }
tokio-util = { version = "0.7.18" }
tracing = { version = "0.1.44", default-features = false }
url = { version = "2.5.8" }
uuid = { version = "1.19.0", features = ["v4"] }

# dev dependencies
criterion = { version = "0.8.1" }
http = { version = "1.4.0" }
mockito = { version = "1.7.1" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
type_complexity = "allow"

await_holding_lock = "warn"
dbg_macro = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
exit = "warn"
filter_map_next = "warn"
fn_params_excessive_bools = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
must_use_candidate = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
option_option = "warn"
redundant_clone = "warn"
ref_option = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_self_not_must_use = "warn"
single_match_else = "warn"
str_to_string = "warn"
suboptimal_flops = "warn"
todo = "warn"
trivially_copy_pass_by_ref = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
use_self = "warn"
verbose_file_reads = "warn"

[profile.release]
opt-level = 3
codegen-units = 16

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
strip = true
panic = "abort"
incremental = false

[profile.bench]
inherits = "release"
lto = "thin"
codegen-units = 1
