[package]
name = "binance"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
engine = { path = "../engine" }
tools = { path = "../tools" }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
itertools = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
http = { workspace = true }
mockito = { workspace = true }

[[bench]]
name = "benches"
harness = false
