[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "bot"
path = "src/main.rs"

[features]
default = ["dep:binance", "dep:kucoin", "dep:solana"]

binance = ["dep:binance"]
kucoin = ["dep:kucoin"]
solana = ["dep:solana"]

[dependencies]
engine = { path = "../engine" }
tools = { path = "../tools", features = ["derive"] }

binance = { path = "../binance", optional = true }
kucoin = { path = "../kucoin", optional = true }
solana = { path = "../solana", optional = true }

anyhow = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

