[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "bot"
path = "src/main.rs"

[features]
default = ["dep:binance", "dep:kucoin", "dep:solana"]

binance = ["dep:binance"]
kucoin = ["dep:kucoin"]
solana = ["dep:solana"]

[dependencies]
engine = { path = "../engine" }
tools = { path = "../tools", features = ["derive"] }

binance = { path = "../binance", optional = true }
kucoin = { path = "../kucoin", optional = true }
solana = { path = "../solana", optional = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
comfy-table = { workspace = true }
mimalloc = { workspace = true, features = ["v3"] }
owo-colors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = { workspace = true }

[lints]
workspace = true

