[package]
name = "engine"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tools = { path = "../tools" }

anyhow = { workspace = true }
async-trait = { workspace = true }
metrics = { workspace = true }
rust_decimal = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
