[package]
name = "engine"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tools = { path = "../tools" }

anyhow = { workspace = true }
async-trait = { workspace = true }
metrics = { workspace = true }
rust_decimal = { workspace = true, features = ["serde-with-float"] }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
