[package]
name = "kucoin"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
engine = { path = "../engine" }
tools = { path = "../tools" }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
hmac = { workspace = true }
itertools = { workspace = true }
percent-encoding = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls"] }
rust_decimal = { workspace = true, features = ["serde-with-float"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
serde_with = { workspace = true, features = ["macros"] }
sha2 = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { workspace = true, features = ["rustls"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
criterion = { workspace = true }
http = { workspace = true }
mockito = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "benches"
harness = false
