[package]
name = "solana"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
engine = { path = "../engine" }
tools = { path = "../tools" }

ahash = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
futures-util = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
simd-json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

bytemuck = { version = "1.25.0" }
num-traits = { version = "0.2.19" }
ruint = { version = "1.17.2" }
solana-client = { version = "3.1.9" }
solana-sdk = { version = "4.0.1" }
spl-token = { version = "9.0.0" }
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }
yellowstone-grpc-client = { version = "12.0.0" }
yellowstone-grpc-proto = { version = "12.0.0" }

[dev-dependencies]
criterion = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "benches"
harness = false
