[package]
name = "tools"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
derive = ["dep:tools-derive"]

[dependencies]
tools-derive = { path = "../tools-derive", optional = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
