[package]
name = "tools"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
derive = ["dep:tools-derive"]

[dependencies]
tools-derive = { path = "../tools-derive", optional = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
